--- a/profiles/c.html
+++ b/profiles/c.html
@@ -293,18 +293,10 @@
 <img src="https://cdn.discordapp.com/attachments/1060662763053129838/1060741623568404520/976572824611336234.gif" style="width: 20px; height: 20px;" alt="Eternal">
 <span class="badge-tooltiptext">Owner</span>
 </div>
-<div class="text" style="display: inline-block;"><span class="sparkle" >Convicted</div></span><br><br>
-<div class="badge">
-<img src="https://cdn.discordapp.com/attachments/1060925985870069791/1061055487346483310/1005492246159822978.gif" style="width: 20px; height: 20px;" alt="Paid">
-<span class="badge-tooltiptext">Premium</span>
-</div>
+<center><h1 class="owner" style="display: inline-block; text-shadow: 0px 1px 1px ;font-family: 'PF Tempesta Five', sans-serif; color: #fff; text-align: center; background-image: url('https://cdn.discordapp.com/attachments/987149728800198686/991834200309248070/sparkle.gif');">Convicted</h1>
 <div class="badge">
 <img src="https://cdn.discordapp.com/attachments/1060925985870069791/1061055086618476554/922552650887749653.png" style="width: 20px; height: 20px;" alt="Codein">
 <span class="badge-tooltiptext">Lean</span>
-</div>
-<div class="badge">
-<img src="main.png" style="width: 20px; height: 20px;" alt="Betastar">
-<span class="badge-tooltiptext">Beta</span>
 </div>
 <div class="badge">
 <img src="https://cdn.discordapp.com/attachments/1060662763053129838/1060742004725788713/913451845920387092.webp" style="width: 20px; height: 20px;" alt="PAID">
@@ -312,7 +304,7 @@
 </div>
 </div>
 <p class="quote">
-<span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="Convicted..">It all comes to an end.</span></a>
+<span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="Convicted.."> It all comes to an end.</span></a>
 </p></center>
 
 </div>
