--- a/profiles/c.html
+++ b/profiles/c.html
@@ -9,10 +9,10 @@
 <meta content="killa.lol [@Convicted]" property="og:title" />
 <meta content="website" property="og:type" />
 <meta content="killa.lol/profiles/c" property="og:url" />
-<meta content="https://cdn.discordapp.com/attachments/1060662763053129838/1060696673954836610/5RY3ZK99E.png" property="og:image" />
+<meta content="https://cdn.discordapp.com/emojis/1051918116826914868.gif?size=96&quality=lossless" property="og:image" />
 <meta content="・Convicted#0024" property="og:description" />
 <link rel="canonical" href="killa.lol" />
-<meta content="#FFFFFF" name="theme-color">
+<meta content="#2f3136" name="theme-color">
 <link rel="stylesheet" href="css/style.css" />
 <link rel="stylesheet" href="css/up.css" />
 <link rel="stylesheet" href="css/chop.css" />
