--- a/profiles/p.html
+++ b/profiles/p.html
@@ -305,7 +305,7 @@
 </div>
 </center>
 <p class="quote">
-<span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="Past..">                На Бога уповаем.</span></a>
+<span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="Past">На Бога уповаем.</span></a>
 </p></center>
 </div>
 <center><div class="wrapper">
@@ -336,7 +336,7 @@
 <iframe style="margin-top: -36px;max-width: 544px" src="https://open.spotify.com/embed/track/6T5i0o62ZyfHRRHHihYJ1n?utm_source=generator&theme=0" width="80%" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 </div>
 <div class="footer" style="text-align: center; text-shadow: 0px 5px 5px ;font-family: 'Common Pixel', sans-serif; color: #ffffff;">
-<h4><a href="Killa.lol" style="text-align: center; text-shadow: 0px 5px 5px ;font-family: 'Common Pixel', sans-serif; color: #ffffff;"></a>
+<h4><a href="Killa.lol" style="text-align: center; text-shadow: 0px 5px 5px ;font-family: 'Common Pixel', sans-serif; color: #ffffff;">Killa.lol</a>
 </h4>
 </div>
 <style type="text/css" css">
