--- a/profiles/p.html
+++ b/profiles/p.html
@@ -336,7 +336,7 @@
 <iframe style="margin-top: -36px;max-width: 544px" src="https://open.spotify.com/embed/track/6T5i0o62ZyfHRRHHihYJ1n?utm_source=generator&theme=0" width="80%" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 </div>
 <div class="footer" style="text-align: center; text-shadow: 0px 5px 5px ;font-family: 'Common Pixel', sans-serif; color: #ffffff;">
-<h4><a href="Killa.lol" style="text-align: center; text-shadow: 0px 5px 5px ;font-family: 'Common Pixel', sans-serif; color: #ffffff;">Killa.lol</a>
+<h4><a href="" style="text-align: center; text-shadow: 0px 5px 5px ;font-family: 'Common Pixel', sans-serif; color: #ffffff;"></a>
 </h4>
 </div>
 <style type="text/css" css">
