--- a/profiles/c.html
+++ b/profiles/c.html
@@ -6,13 +6,13 @@
 <link href="assets/media/logo.png" rel="icon" type="image/x-icon" />
 <link href="ajax/libs/font-awesome/6.1.0/css/all.min.css" rel="stylesheet" />
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
-<meta content="killa.lol [@past]" property="og:title" />
+<meta content="killa.lol [@Convicted]" property="og:title" />
 <meta content="website" property="og:type" />
 <meta content="killa.lol/profiles/c" property="og:url" />
-<meta content="https://cdn.discordapp.com/attachments/1004849202507038804/1061442435777052772/1051918116826914868_1.gif" property="og:image" />
+<meta content="https://cdn.discordapp.com/attachments/1060662763053129838/1060696673954836610/5RY3ZK99E.png" property="og:image" />
 <meta content="・Convicted#0024" property="og:description" />
 <link rel="canonical" href="killa.lol" />
-<meta content="#2f3136" name="theme-color">
+<meta content="#FFFFFF" name="theme-color">
 <link rel="stylesheet" href="css/style.css" />
 <link rel="stylesheet" href="css/up.css" />
 <link rel="stylesheet" href="css/chop.css" />
@@ -20,7 +20,7 @@
 <link rel="icon" href="assets/media/ee.png" type="image/png" sizes="16x16 32x32 64x64">
 <script disable-devtool-auto src='js/disable-devtool.min.js'></script>
 <meta property="twitter:url" content="">
-<meta property="twitter:title" content=".gg/ac7 ・ @Convicted">
+<meta property="twitter:title" content=".gg/Killabio ・ @Convicted">
 <meta property="twitter:description" content="Convicted#0024">
 <link href="https://fonts.cdnfonts.com/css/common-pixel" rel="stylesheet">
 <style>@import url('https://fonts.cdnfonts.com/css/common-pixel');</style>
@@ -29,8 +29,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <title>Devils Reject</title>
-	
 </head>
+
 <script src="js/snowstorm.js"></script>
 
 <script>snowStorm.excludeMobile = false;</script>
@@ -336,9 +336,9 @@
 </h4>
 </div>
 </div></center><br><br>
-<div style="text-align: center;">
-<iframe style="margin-top: -36px;max-width: 544px" src="https://open.spotify.com/embed/track/3sJ1BJd8SjAI0gD0wrOUjU?utm_source=generator&theme=0" width="80%" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-</div>
+<a href="https://discord.com/users/1000022273673138226" target="_blank">
+<img src="https://discord.c99.nl/widget/theme-4/1000022273673138226.png" style="
+width: 300px;"></a>
 <div class="footer" style="text-align: center; text-shadow: 0px 5px 5px ;font-family: 'Common Pixel', sans-serif; color: #FFC0CB;">
 <h4><a href="" style="text-align: center; text-shadow: 0px 5px 5px ;font-family: 'Common Pixel', sans-serif; color: #FFC0CB;"></a>
 </h4>
