--- a/profiles/p.html
+++ b/profiles/p.html
@@ -9,7 +9,7 @@
 <meta content="killa.lol [@past]" property="og:title" />
 <meta content="website" property="og:type" />
 <meta content="killa.lol/profiles/c" property="og:url" />
-<meta content="https://cdn.discordapp.com/attachments/1060662763053129838/1060696673954836610/5RY3ZK99E.png" property="og:image" />
+<meta content="https://cdn.discordapp.com/attachments/1004849202507038804/1061453777388974100/966354724381159524.gif" property="og:image" />
 <meta content="・past#1483" property="og:description" />
 <link rel="canonical" href="killa.lol" />
 <meta content="#2f3136" name="theme-color">
@@ -333,9 +333,10 @@
 </div>
 </div></center><br><br>
 <a href="https://discord.com/users/816500072547876864" target="_blank">
-<img src="https://discord.c99.nl/widget/theme-4/816500072547876864.png" style="width: 300px;"></a>
-<div class="footer" style="text-align: center; text-shadow: 0px 5px 5px ;font-family: 'Common Pixel', sans-serif; color: #ffffff;">
-<h4><a href="" style="text-align: center; text-shadow: 0px 5px 5px ;font-family: 'Common Pixel', sans-serif; color: #ffffff;"></a>
+<img src="https://discord.c99.nl/widget/theme-4/816500072547876864.png" style="
+width: 300px;"></a>
+<div class="footer" style="text-align: center; text-shadow: 0px 5px 5px ;font-family: 'Common Pixel', sans-serif; color: #FFC0CB;">
+<h4><a href="" style="text-align: center; text-shadow: 0px 5px 5px ;font-family: 'Common Pixel', sans-serif; color: #FFC0CB;"></a>
 </h4>
 </div>
 <style type="text/css" css">
