--- a/profiles/cam.html
+++ b/profiles/cam.html
@@ -330,7 +330,7 @@
     }
     }
  </style>   
-<body style="background-image: url('https://tenor.com/view/flex-nle-choppa-racks-racksonracks-gif-18519963'); background-size: cover;">
+<body style="background-image: url('https://cdn.discordapp.com/attachments/1061492123603582986/1061500154752020540/flex-nle.gif'); background-size: cover;">
 <script src="js/spooky.js"></script>
 <div class="title">
 <div class="title-img">
