--- a/profiles/jay.html
+++ b/profiles/jay.html
@@ -356,23 +356,23 @@
 </p></center>
 </div>
 <center><div class="wrapper">
-<div class="button Discord" onclick="window.open('https://discordapp.com/users/1052623145229635735', '_blank');">
+<div class="button Discord" onclick="window.open('https://discordapp.com/users/1036292659985260555', '_blank');">
 <div class="icon">
-<img src="https://cdn.discordapp.com/attachments/1060925985870069791/1061073995052630036/tele.png" style="width: 40px; height: 40px;" alt="PAID">
+<img src="https://cdn.discordapp.com/attachments/1061489131143831672/1061504857204338718/10545789086972028d09.png" style="width: 40px; height: 40px;" alt="PAID">
 </div>
-<span>beserker#0090</span>
+<span>Discord</span>
 </div>
 <div class="button TikTok" onclick="window.open('https://www.tiktok.com/@5star.daza', '_blank');">
 <div class="icon">
-<img src="https://cdn.discordapp.com/attachments/1061492123603582986/1061496993857421403/230378391172284416.png" style="width: 40px; height: 40px;" alt="PAID">
+<img src="https://cdn.discordapp.com/attachments/1061489131143831672/1061505105175793805/1011003868420780052.webp" style="width: 40px; height: 40px;" alt="PAID">
 </div>
 <span>TikTok</span>
 </div>
 <div class="button ghostedpqck" onclick="window.open('ghostedpqck', '_blank');">
 <div class="icon">
-<img src="https://cdn.discordapp.com/attachments/1061492123603582986/1061497091844735006/10545791504d35917855.png" style="width: 40px; height: 40px;" alt="PAID">
+<img src="https://cdn.discordapp.com/attachments/1061489131143831672/1061504923046510602/102ss9216492367122522.png" style="width: 40px; height: 40px;" alt="PAID">
 </div>
-<span>@ghostedpqck</span>
+<span>Snapchat</span>
 </div>
 </div></center><br><br>
 </div>
@@ -380,8 +380,8 @@
 </div>
 <span id="typElement"></span>
 </div></center><br><br>
-<a href="https://discord.com/users/1052623145229635735" target="_blank">
-<img src="https://discord.c99.nl/widget/theme-4/1052623145229635735.png" style="
+<a href="https://discord.com/users/1036292659985260555" target="_blank">
+<img src="https://discord.c99.nl/widget/theme-4/1036292659985260555.png" style="
 width: 300px;"></a>
 <div class="footer" style="text-align: center; text-shadow: 0px 5px 5px ;font-family: 'Common Pixel', sans-serif; color: #FFC0CB;">
 <h4><a href="" style="text-align: center; text-shadow: 0px 5px 5px ;font-family: 'Common Pixel', sans-serif; color: #FFC0CB;"></a>
