--- a/profiles/tears.html
+++ b/profiles/tears.html
@@ -29,7 +29,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <title>1337</title>
-<link rel="icon" href="https://cdn.discordapp.com/attachments/1060663915098419282/1061506854842286161/1000016749720252456.gif" type="image/gif" sizes="16x16">
+<link rel="icon" href="https://cdn.discordapp.com/attachments/1060663915098419282/1061508696045256805/1000016749720252456.gif" type="image/gif" sizes="16x16">
 </head>
 
 <script src="js/snowstorm.js"></script>
@@ -335,10 +335,10 @@
 <div class="title">
 <div class="title-img">
 <center><img alt="Avatar" class="avatar" style="position: center;" src="https://cdn.discordapp.com/attachments/1060663915098419282/1060702064465944697/3205c72ec259cc1c06a5f884d98f1ebb.png">
-<center><h1 class="owner" style="display: inline-block; text-shadow: 0px 1px 1px ;font-family: 'PF Tempesta Five', sans-serif; color: #fff; text-align: center; background-image: url('https://i.gyazo.com/e764b81673f56076e19bc9a53753f9c5.gif');">T E A R S</h1>
+<center><h1 class="owner" style="display: inline-block; text-shadow: 0px 1px 1px ;font-family: 'PF Tempesta Five', sans-serif; color: #fff; text-align: center; background-image: url('https://cdn.discordapp.com/attachments/987149728800198686/991834200309248070/sparkle.gif');">T E A R S</h1>
 </div>
 <div class="badge">
-<img src="https://cdn.discordapp.com/attachments/1060663915098419282/1061506854842286161/1000016749720252456.gif" style="width: 20px; height: 20px;" alt="Eternal">
+<img src="https://cdn.discordapp.com/attachments/1060663915098419282/1061508696045256805/1000016749720252456.gif" style="width: 20px; height: 20px;" alt="Eternal">
 <span class="badge-tooltiptext">Tears</span>
 </div>
 <div class="badge">
