--- a/profiles/killhouse.html
+++ b/profiles/killhouse.html
@@ -334,7 +334,7 @@
 <script src="js/spooky.js"></script>
 <div class="title">
 <div class="title-img">
-<center><img alt="Avatar" class="avatar" style="position: center;" src="https://cdn.discordapp.com/attachments/1007781572394631199/1060728333769379881/IMG_8362.jpg.png">
+<center><img alt="Avatar" class="avatar" style="position: center;" src="https://cdn.discordapp.com/attachments/1007781572394631199/1060728333769379881/IMG_8362.jpg">
 <center><h1 class="owner" style="display: inline-block; text-shadow: 0px 1px 1px ;font-family: 'PF Tempesta Five', sans-serif; color: #fff; text-align: center; background-image: url('https://cdn.discordapp.com/attachments/987149728800198686/991834200309248070/sparkle.gif');">T E A R S</h1>
 </div>
 <div class="badge">
