--- a/profiles/jada.html
+++ b/profiles/jada.html
@@ -6,11 +6,11 @@
 <link href="assets/media/logo.png" rel="icon" type="image/x-icon" />
 <link href="ajax/libs/font-awesome/6.1.0/css/all.min.css" rel="stylesheet" />
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
-<meta content="killa.lol [@xo]" property="og:title" />
+<meta content="killa.lol [@jada]" property="og:title" />
 <meta content="website" property="og:type" />
 <meta content="killa.lol/profiles/xo" property="og:url" />
 <meta content="https://cdn.discordapp.com/attachments/1004849202507038804/1061453777388974100/966354724381159524.gif" property="og:image" />
-<meta content="・xo#0005" property="og:description" />
+<meta content="jade.#0006" property="og:description" />
 <link rel="canonical" href="killa.lol" />
 <meta content="#2f3136" name="theme-color">
 <link rel="stylesheet" href="css/style.css" />
@@ -20,15 +20,15 @@
 <link rel="icon" href="assets/media/ee.png" type="image/png" sizes="16x16 32x32 64x64">
 <script disable-devtool-auto src='js/disable-devtool.min.js'></script>
 <meta property="twitter:url" content="">
-<meta property="twitter:title" content=".gg/Killabio ・ @xo">
-<meta property="twitter:description" content="xo#0005">
+<meta property="twitter:title" content=".gg/Killabio ・ @jada">
+<meta property="twitter:description" content="jade.#0006">
 <link href="https://fonts.cdnfonts.com/css/common-pixel" rel="stylesheet">
 <style>@import url('https://fonts.cdnfonts.com/css/common-pixel');</style>
 <link href="https://fonts.cdnfonts.com/css/pf-tempesta-five" rel="stylesheet">
 <style>@import url('https://fonts.cdnfonts.com/css/pf-tempesta-five');</style>
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>XO</title>
+<title>jada</title>
 <link rel="icon" href="https://cdn.discordapp.com/emojis/1059338871084683284.webp?size=80&quality=lossless" type="image/gif" sizes="16x16">
 </head>
 
@@ -334,8 +334,8 @@
 <script src="js/spooky.js"></script>
 <div class="title">
 <div class="title-img">
-    <center><img alt="Avatar" class="avatar" style="position: center;" src="https://media.discordapp.net/attachments/1060000751352553633/1060721640893329408/62694DB5-F84F-4E4F-8CDC-2394A1DCB8B9.jpg?width=394&height=480">
-        <center><h1 class="owner" style="display: inline-block; text-shadow: 0px 1px 1px ;font-family: 'PF Tempesta Five', sans-serif; color: #fff; text-align: center; background-image: url('https://cdn.discordapp.com/attachments/987149728800198686/991834200309248070/sparkle.gif');">J A D A</h1>
+<center><img alt="Avatar" class="avatar" style="position: center;" src="https://media.discordapp.net/attachments/1060000751352553633/1060721640893329408/62694DB5-F84F-4E4F-8CDC-2394A1DCB8B9.jpg?width=394&height=480">
+<center><h1 class="owner" style="display: inline-block; text-shadow: 0px 1px 1px ;font-family: 'PF Tempesta Five', sans-serif; color: #fff; text-align: center; background-image: url('https://cdn.discordapp.com/attachments/987149728800198686/991834200309248070/sparkle.gif');">J A D A</h1>
 </div>
 <div class="badge">
 <img src="https://cdn.discordapp.com/emojis/1059336553199042622.gif?size=80&quality=lossless" style="width: 20px; height: 20px;" alt="Eternal">
@@ -354,19 +354,6 @@
 <p class="quote">
 <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="Killhouse..">Status:emy and rosie </span></a>
 </p></center>
-</div>
-<center><div class="wrapper">
-<div class="button Twitter" onclick="window.open('https://twitter.com/dabigxo', '_blank');">
-<div class="icon">
-<img src="https://cdn.discordapp.com/emojis/1054579872023969822.webp?size=80&quality=lossless" style="width: 40px; height: 40px;" alt="PAID">
-</div>
-<span>Twitter</span>
-</div>
-<div class="button isntagram" onclick="window.open('https://instagram.com/dabigxo/', '_blank');">
-<div class="icon">
-<img src="https://cdn.discordapp.com/emojis/1054579150435917855.webp?size=80&quality=lossless" style="width: 40px; height: 40px;" alt="PAID">
-</div>
-<span>instagram</span>
 </div>
 </div></center><br><br>
 </div>
@@ -636,7 +623,7 @@ width: 300px;"></a>
 	
 	function type() {
 		let strs = [
-			  "0005",
+			  "0006",
 	];
    
 	var num = getRandomInt(strs.length);
