--- a/profiles/c.html
+++ b/profiles/c.html
@@ -330,12 +330,12 @@
     }
     }
  </style>   
-<body style="background-image: url('https://cdn.discordapp.com/attachments/1057544736359055362/1061538765539135568/Convictedbanner.png'); background-size: cover;">
+<body style="background-image: url('https://cdn.discordapp.com/attachments/1051942010963099788/1058825771558379540/Convictedbanner.png'); background-size: cover;">
 <script src="js/spooky.js"></script>
 <div class="title">
 <div class="title-img">
 <center><img alt="Avatar" class="avatar" style="position: center;" src="https://cdn.discordapp.com/attachments/966425184594706542/1058141379659829248/IMG_4028.jpg">
-<center><h1 class="owner" style="display: inline-block; text-shadow: 0px 1px 1px ;font-family: 'PF Tempesta Five', sans-serif; color: #fff; text-align: center; background-image: url('https://i.gyazo.com/e764b81673f56076e19bc9a53753f9c5.gif');">Convicted</h1>
+<center><h1 class="owner" style="display: inline-block; text-shadow: 0px 1px 1px ;font-family: 'PF Tempesta Five', sans-serif; color: #fff; text-align: center; background-image: url('https://cdn.discordapp.com/attachments/987149728800198686/991834200309248070/sparkle.gif');">Convicted</h1>
 </div>
 <div class="badge">
 <img src="https://cdn.discordapp.com/attachments/1060662763053129838/1060741623568404520/976572824611336234.gif" style="width: 20px; height: 20px;" alt="Eternal">
