--- a/profiles/lvl.html
+++ b/profiles/lvl.html
@@ -352,9 +352,9 @@
 </div>
 </center>
 <p class="quote">
-<pre>
-Graphic Designer Amateur | Commisions / open | lvl x Good_day x zion.
-</pre>
+<body>
+<p style="color:#ffffff";>Graphic Designer Amateur | Commisions / open | lvl x Good_day x zion</p>
+</body>
 </p></center>
 </div>
 <center><div class="wrapper">
